#3-JsonConnect: push 취소

--- a/.gitignore
+++ b/.gitignore
@@ -96,5 +96,6 @@ iOSInjectionProject/
 
 Info.plist
 GoogleService-Info.plist
+ApiKey.plist
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,firebase
